--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery": "1.11.0",
     "normalize-css": "~3.0.0",
     "fastclick": "~0.6.11",
-    "modernizr": "~2.7.1"
+    "modernizr": "~2.7.1",
+    "baze-grid": "~0.1.0"
   }
 }
