--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "devDependencies": {
     "gulp": "~3.8.1",
-    "gulp-util": "~2.2.14",
-    "gulp-ruby-sass": "~0.3.0",
     "gulp-autoprefixer": "0.0.6",
+    "gulp-changed": "~0.2.1",
     "gulp-imagemin": "~0.1.5",
+    "gulp-livereload": "~1.1.1",
     "gulp-minify-css": "~0.3.0",
     "gulp-rename": "~1.0.0",
+    "gulp-ruby-sass": "~0.3.0",
     "gulp-uglify": "~0.2.1",
-    "gulp-clean": "~0.2.4",
-    "gulp-livereload": "~1.1.1",
+    "gulp-util": "~2.2.14",
     "gulp-watch": "~0.5.0",
-    "gulp-changed": "~0.2.1",
-    "gulp-webp": "~0.1.2"
+    "gulp-webp": "~0.1.2",
+    "rimraf": "^2.2.8"
   }
 }
