--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-changed": "~0.2.1",
     "gulp-imagemin": "~0.1.5",
     "gulp-livereload": "~1.1.1",
+    "gulp-load-plugins": "^0.5.3",
     "gulp-minify-css": "~0.3.0",
     "gulp-rename": "~1.0.0",
     "gulp-ruby-sass": "~0.3.0",
