--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-css": "~0.3.0",
     "gulp-rename": "~1.0.0",
-    "gulp-ruby-sass": "~0.3.0",
+    "gulp-ruby-sass": "^0.7.1",
     "gulp-uglify": "~0.2.1",
     "gulp-util": "~2.2.14",
     "gulp-watch": "~0.5.0",
