--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ node_modules
 # ----------------------------------------------------------------------- #
 
 bower_components
+
+
+# Frontend files
+# ----------------------------------------------------------------------- #
+
+raw/
