--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "devDependencies": {
     "del": "^0.1.1",
-    "gulp": "~3.8.8",
+    "gulp": "^3.8.8",
     "gulp-autoprefixer": "2.0.0",
-    "gulp-changed": "~0.2.1",
-    "gulp-imagemin": "~0.1.5",
-    "gulp-livereload": "~1.1.1",
+    "gulp-changed": "^0.2.1",
+    "gulp-imagemin": "^0.1.5",
+    "gulp-livereload": "^1.1.1",
     "gulp-load-plugins": "^0.7.1",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-rename": "~1.0.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-rename": "^1.0.0",
     "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "~1.0.0",
-    "gulp-util": "~2.2.14",
-    "gulp-watch": "~0.5.0",
-    "gulp-webp": "~2.1.1"
+    "gulp-uglify": "^1.0.0",
+    "gulp-util": "^2.2.14",
+    "gulp-watch": "^0.5.0",
+    "gulp-webp": "^2.1.1"
   }
 }
