--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gulp-load-plugins": "^0.9.0",
     "gulp-minify-css": "^0.3.11",
     "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.0.0",
     "gulp-util": "^2.2.14",
     "gulp-watch": "^4.2.3",
