--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "url": "https://github.com/ImBobby/suit-baze"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.2",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "2.3.1",
     "gulp-changed": "^1.0.0",
     "gulp-imagemin": "^2.0.0",
     "gulp-livereload": "^1.1.1",
     "gulp-load-plugins": "^0.9.0",
     "gulp-minify-css": "^0.3.11",
+    "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.3",
     "gulp-uglify": "^1.0.0",
