--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.3.2",
+    "babel-preset-es2015": "^6.5.0",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.0.0",
     "gulp-imagemin": "^2.0.0",
     "gulp-livereload": "^1.1.1",
