--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.0.0",
+    "gulp-clean-css": "^2.0.4",
     "gulp-imagemin": "^2.0.0",
     "gulp-livereload": "^1.1.1",
     "gulp-load-plugins": "^0.9.0",
-    "gulp-minify-css": "^0.3.11",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.3",
