--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.2",
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
