--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "homepage": "https://github.com/ImBobby/suit-baze",
   "dependencies": {
-    "jquery": "1.12.1",
+    "jquery": "^3.1.0",
     "normalize-css": "~3.0.3",
     "fastclick": "~0.6.11",
     "modernizr": "~2.8.3",
