--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^6.5.3",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "beepbeep": "^1.2.0",
     "del": "^2.2.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
