--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "beepbeep": "^1.2.0",
     "del": "^2.2.2",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^7.0.0",
     "gulp-changed": "^1.3.2",
     "gulp-clean-css": "^2.3.2",
     "gulp-imagemin": "^3.1.1",
