--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "postcss-object-fit-images": "^1.1.2",
