--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.11",
     "postcss-object-fit-images": "^1.1.2",
-    "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-stream": "^1.24.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
