--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,17 @@
 {
-  "name": "suit-baze",
-  "version": "2.2.1",
   "authors": [
     "Suitmedia"
   ],
-  "description": "suit-baze is a Front-end starter kit base on HTML5 Boilerplate, modified by Suitmedia",
-  "license": "MIT",
-  "homepage": "https://github.com/ImBobby/suit-baze",
   "dependencies": {
+    "baze-grid": "~2.0.2",
     "jquery": "^3.1.0",
-    "normalize-css": "~3.0.3",
     "modernizr": "~2.8.3",
-    "baze-grid": "~2.0.2"
-  }
+    "normalize-css": "~3.0.3",
+    "slick-carousel": "~1.6.0"
+  },
+  "description": "suit-baze is a Front-end starter kit base on HTML5 Boilerplate, modified by Suitmedia",
+  "homepage": "https://github.com/ImBobby/suit-baze",
+  "license": "MIT",
+  "name": "suit-baze",
+  "version": "2.2.1"
 }
