--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ImBobby/suit-baze"
+    "url": "https://github.com/suitmedia/suit-baze"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
